test/integration/bad/target_pe_bad.stan
functions {
  real foo(){
    return 1.0;
  }
}

model {
  target += foo;
}
